# ngrm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/cube/: main.cpp
include/ngrm/: backend.h  drawable.h  math.h  system.h  timer.h
include/ngrm/glfw/: backend.h  timer.h
src/: main.cpp
